# factorio-spritter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: commands.rs  image_util.rs  logger.rs  lua.rs  main.rs
src/commands/: gif.rs  icon.rs  optimize.rs  split.rs  spritesheet.rs
