[package]
name = "spritter"
version = "0.2.0"
edition = "2021"
authors = ["fgardt <me@fgardt.dev>"]
description = "Spritesheet generator for factorio"

[profile.release]
strip = true
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
error-stack = "0.4"
image = "0.25"
log = "0.4"
thiserror = "1.0"
