[package]
name = "spritter"
version = "1.2.2"
edition = "2021"
authors = ["fgardt <me@fgardt.dev>"]
description = "Spritesheet generator for factorio"
repository = "https://github.com/fgardt/factorio-spritter"

[profile.release]
strip = true
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
image = { version = "0.25", features = ["png", "gif"] }
log = "0.4"
rayon = "1.10"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
natord = "1.0"
oxipng = { version = "9", default-features = false, features = ["parallel"] }
imagequant = "4"
